--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -1,4 +1,4 @@
-name: "Validate OCPI OpenAPI specification"
+name: "Validate OpenAPI specification"
 on:
   push:
     branches:
@@ -13,6 +13,8 @@ on:
     paths-ignore:
       - "**.md"
 
+  workflow_dispatch:
+
 jobs:
   validate-ocpi-v221-specification:
     name: "Validate the OCPI 2.2.1 OpenAPI specification"
@@ -26,23 +28,3 @@ jobs:
         uses: char0n/swagger-editor-validate@v1.3.2
         with:
           definition-file: ./2.2.1/api/2.2.1.spec.yml
-
-  fmt:
-    name: Format Go code
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.19
-
-      - name: Download Go modules
-        run: |
-          cd 2.2.1
-          go mod download
-
-      - name: Format Go code
-        run: go fmt ./2.2.1/...
