--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,14 +3,14 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     assignees:
       - "xBlaz3kx"
     reviewers:
       - "xBlaz3kx"
 
   - package-ecosystem: "gomod"
-    directory: "/"
+    directory: "/2.2.1/"
     schedule:
       interval: "weekly"
     assignees:
