Feature: Client & server generation on spec change (#6)
* feat: autogen on pr or push if validation is successful

* [Autogen] Generated client and server code from OpenAPI spec

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -15,16 +15,39 @@ on:
 
   workflow_dispatch:
 
+# todo make generic
 jobs:
   validate-ocpi-v221-specification:
     name: "Validate the OCPI 2.2.1 OpenAPI specification"
     runs-on: ubuntu-latest
+    permissions:
+      # Permissions are needed to push the changes back to the repository
+      contents: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Swagger Editor Validator
+      - name: Validate specification
+        id: validate
         uses: swaggerexpert/swagger-editor-validate@v1
         with:
           definition-file: ./2.2.1/api/2.2.1.spec.yml
+
+      - name: Setup Go
+        if: steps.validate.outcome == 'success'
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.23.0
+
+      - name: Install Oapi Codegen
+        if: steps.validate.outcome == 'success'
+        working-directory: ./2.2.1
+        run: |
+          go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
+          go generate ./...
+
+      - name: Push the generated code
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "[Autogen] Generated client and server code from OpenAPI spec"
